--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
       <div id="msg" class="msg">
           <div>You Said:</div>
-          <span class="box">20</span>
+          <span class="box"> </span>
 
           <div>GO HIGHER</div>
       </div>
